# hackathon-MultipleAgents

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
src/multiple_agents/: __init__.py  agent.py  cli.py  message.py  orchestrator.py
src/multiple_agents/agents/: __init__.py  executor.py  planner.py  report_agent.py  reviewer.py
tests/: test_agents.py  test_orchestrator.py
